--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <div class="Grid">
   <header>NO AGENCY NEW YORK 3D MODELS</header>
   <div class="Grid-cell fullborder">
-  	<img class="logo" src="logo.png" alt="No Agency logo" width="70em">
+  	<img class="logo" src="assets/logo.png" alt="No Agency logo" width="70em">
   </div>
   <div class="Grid-cell fullborder">
   	<div id="threeD-content">
-  		<div><img class="profile" src="profile.png" alt="No Agency profile" width="30em" height="30em"></div>
-  		<div><img class="nav" src="nav.png" alt="navigation" width="30em" height="30em"></div>
+  		<div><img class="profile" src="assets/profile.png" alt="No Agency profile" width="30em" height="30em"></div>
+  		<div><img class="nav" src="assets/nav.png" alt="navigation" width="30em" height="30em"></div>
   	</div>
   </div>
   <div class="Grid-cell">
