--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<div id="stats"></div>
+<!-- <div id="stats"></div> -->
   <div id="loadingOverlay">
     LOADING <span id="modelCount"></span><br>
     last load: <span id="loadCount"></span>
@@ -39,16 +39,16 @@
   		<!-- <div><img class="nav" src="assets/nav.png" alt="navigation" width="30em" height="30em"></div> -->
   	</div>
   </div>
-  <div class="Grid-cell">
-  	<p class="selected"><a href="">MAY DANIELS</a></p>
-  	<p><a href="">TORRAINE FUTURUM</a></p>
-  	<p><a href="">GABRIETTE</a></p>
-  	<p><a href="">KATERINA TANNENBAUM</a></p>
-  	<p><a href="">ELOISA SANTOS</a></p>
-  	<p><a href="">TAYLOR JEANNE</a></p>
-  	<p><a href="">SEASHELL COKER</a></p>
-  	<p><a href="">SABRINA FUENTES</a></p>
-  	<p><a href="">VERA LE SAVOY</a></p>
+  <div id="listOfNames" class="Grid-cell">
+  	<p id="may" class="selected">MAY DANIELS</p>
+  	<p id="torraine">TORRAINE FUTURUM</p>
+  	<p id="gabriette">GABRIETTE</p>
+  	<p id="kat">KATERINA TANNENBAUM</p>
+  	<p id="eloisa">ELOISA SANTOS</p>
+  	<p id="taylor">TAYLOR JEANNE</p>
+  	<p id="giannina">GIANNINA</p>
+  	<p id="sabrina">SABRINA FUENTES</p>
+  	<p id="vera">VERA LE SAVOY</p>
   </div>
 </div>
 <footer><p>NO AGENCY NEW YORK © 2018</p></footer>
