--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="js/OBJLoader.js"></script>
 <script src="js/MTLLoader.js"></script>
 <script src="js/stats.min.js"></script>
+<script src="js/model_stats.js"></script>
 <!-- main JS  -->
 <script src="js/models.js"></script>
 <link href=no-agency-3d-styles.css rel=stylesheet type=text/css>
@@ -35,16 +36,17 @@
   <div class="Grid-cell">
     <p> 3D MODELS: </p>
   </div>
-  <div class="dropdown Grid-cell">
+  <div class="Grid-cell">
   <button onclick="myFunction()" id="selected" class="dropbtn Grid-cell-nom">ELOISA SANTOS</button>
     <div id="myDropdown" class="dropdown-content">
       <p id="eloisa">ELOISA SANTOS</p>
       <p id="gabriette">GABRIETTE</p>
       <p id="giannina">GIANNINA OTETO</p>
-      <P ID="kristen">KRISTEN DEGIROLAMO</p>
+      <P id="kristen">KRISTEN DEGIROLAMO</p>
       <p id="may">MAY DANIELS</p>
-      <p id="remy">REMY</p>
+      <p id="remy">REMY HOLWICK</p>
       <p id="sabrina">SABRINA FUENTES</p>
+      <p id="seashell"> SEASHELL COKER</p>
       <p id="taylor">TAYLOR JEANNE</p>
       <p id="torraine">TORRAINE FUTURUM</p>
       <p id="vera">VERA LE SAVOY</p>
@@ -52,7 +54,7 @@
     </div>
   </div>
   
-  <div class="Grid-cell zero-margin">
+  <div class="Grid-cell">
   	<div id="threeD-content">
   		<!-- <div><img class="profile" src="assets/profile.png" alt="No Agency profile" width="30em" height="30em"></div> -->
 
