update models, fix controls

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       <p id="eloisa">ELOISA SANTOS</p>
       <p id="gabriette">GABRIETTE</p>
       <p id="giannina">GIANNINA OTETO</p>
+      <p id="kat">KATERINA TANNENBAUM</p>
       <P id="kristen">KRISTEN DEGIROLAMO</p>
       <p id="may">MAY DANIELS</p>
       <p id="remy">REMY HOLWICK</p>
