load one model at a time

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
 
 <body>
 <!-- <div id="stats"></div> -->
-  <div id="loadingOverlay">
+  <!-- <div id="loadingOverlay">
     LOADING <span id="modelCount"></span><br>
     last load: <span id="loadCount"></span>
-  </div>
+  </div> -->
 <div class="Grid">
   <!-- <header>3D MODELS</header> -->
   <div class="Grid-cell fullborder">
