load one model at a time - II

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <p> 3D MODELS: </p>
   </div>
   <div class="Grid-cell">
-  <button onclick="myFunction()" id="selected" class="dropbtn Grid-cell-nom">ELOISA SANTOS</button>
+  <button onclick="myFunction()" id="selected" class="dropbtn Grid-cell-nom">SELECT MODEL</button>
     <div id="myDropdown" class="dropdown-content">
       <p id="eloisa">ELOISA SANTOS</p>
       <p id="gabriette">GABRIETTE</p>
